src/app/home/home.component.scss
/* ... */
/*** Social Section ***/
.social-section {
  margin-top: 3rem;
  margin-bottom: 1rem;
}
.social-wrapper {
  display: block;
  margin: 30px auto;
  flex-wrap: wrap;
  text-align: center;
  a {
    display: inline-block;
    margin: 0 10px;
  }
  .credit {
    display: block;
    font-size: .8rem;
    margin: auto;
    margin-top: 15px;
    outline: none;
    color: #333;
  }
}
.social-link {
  flex: 1;
  box-sizing: border-box;
}
.social-icon-wrapper {
  width: 30px;
  height: 30px;
  background: #333;
  border-radius: 50%;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: .9rem;
  margin: auto;
}

/*--------- Landscape Devices ---------*/
/***** LG Devices *****/
@media (min-width: 1200px) and (orientation: landscape){
  /*** Hero Section ***/
  .carousel-wrapper {
    margin-top: 5rem;
    .carousel {
      margin-top: 8rem;
    }
    .carousel__img {
      height: 85%;
      max-height: 85%;
    }
  }
}
/***** MD Devices*****/
@media (min-width: 993px) and (max-width: 1199px) and (orientation: landscape){
  /*** Menu Section ***/
  .menu-wrapper {
    width: 42%;
    .menu .menu-item {
      margin: 0 5px;
    }
  }
  /*** Hero Section ***/
  .carousel-btn {
    &.--next {
      right: 3%;
    }
    &.--prev {
      left: 3%;
    }
  }
  .carousel-wrapper {
    .carousel {
      .carousel__item:nth-child(1) {
        &.selected .carousel__img {
          transform: rotateY(0deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(-90deg) scale(.2) !important;
        }
      }
      .carousel__item:nth-child(2) {
        &.selected .carousel__img {
          transform: rotateY(90deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(0deg) scale(.2) !important;
        }
      }
      .carousel__item:nth-child(3) {
        &.selected .carousel__img {
          transform: rotateY(180deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(90deg) scale(0.2) !important;
        }
        .hero-text {
          right: 20% !important;
        }
      }
      .carousel__item:nth-child(4) {
        &.selected .carousel__img {
          transform: rotateY(270deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(180deg) scale(0.2) !important;
        }
      }
    }
  }
  /*** About Section ***/
  .about-section {
    width: 80%;
    .about-column-wrapper {
      width: 95%;
    }
  }
  /*** Professional Section ***/
  .profile-slider {
    width: 500%;
    .profile {
      width: calc(5% - 40px);
    }
  }
  /*** Contact Section ***/
  .contact-wrapper {
    .contact-box {
      width: 100%;
      height: 110%;
    }
  }
  /*** Social Section ***/
  .social-section {
    margin-top: 6rem;
  }
}
/***** SM Devices *****/
@media (min-width: 768px) and (max-width: 992px) and (orientation: landscape){
  /*** Menu Section ***/
  .menu-wrapper {
    width: 50%;
  }
  /*** Hero Section ***/
  .hero-text {
    font-size: 14px;
    .hero-inner-wrapper {
      width: 60%;
    }
  }
  .carousel-wrapper {
    .carousel {
      .carousel__item:nth-child(1) {
        &.selected .carousel__img {
          transform: rotateY(0deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(-90deg) scale(.2) !important;
        }
        .hero-text {
          right: 20% !important;
          transform: rotateY(360deg) translateX(20px) !important;
        }
      }
      .carousel__item:nth-child(2) {
        &.selected .carousel__img {
          transform: rotateY(90deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(0deg) scale(.2) !important;
        }
        .hero-text {
          transform: rotateY(90deg) translateX(20px) !important;
        }
      }
      .carousel__item:nth-child(3) {
        &.selected .carousel__img {
          transform: rotateY(180deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(90deg) scale(0.2) !important;
        }
        .hero-text {
          transform: rotateY(180deg) translateX(-50px) !important;
        }
      }
      .carousel__item:nth-child(4) {
        &.selected .carousel__img {
          transform: rotateY(270deg) scale(0.9) !important;
        }
        .carousel__img {
          transform: rotateY(180deg) scale(0.2) !important;
        }
        .hero-text {
          transform: rotateY(270deg) translateX(20px) !important;
        }
      }
    }
  }
  /*** About Section ***/
  .about-section {
    width: 100%;
    margin-top: 5rem;
    .about-column-wrapper {
      width: 95%;
    }
    .about-btn {
      padding: 10px 20px;
    }
  }
  .about-column-wrapper .about-wrapper {
    .about__col-title {
      font-size: 16px;
    }
    .about-icon-wrapper {
      font-size: 1.6rem;
    }
  }
  /*** Patient Section ***/
  .name-tag {
    .name {
      font-size: 1.4rem;
      margin-bottom: 5px;
    }
  }
  /*** Professional Section ***/
  .professional-section {
    .profile-inner-wrapper {
      width: 100%;
    }
  }
  .profile-slider {
    .profile {
      width: calc(5% - 40px);
    }
  }
  /*** Contact Section ***/
  .contact-section {
    .contact-wrapper {
      grid-column: 1/6;
    }
  }
  .contact-wrapper {
    .contact-box {
      height: 130%;
      margin-left: 10%;
    }
  }
  /*** Social Section ***/
  .social-section {
    margin-top: 10rem;
  }
}
/* ... */

